<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data class="CalendarListBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.example.habitpalette.ui.calendar.CalendarListViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.calendar.HabitCalendarActivity">


        <LinearLayout
            android:id="@+id/layout_calendar_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:padding="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_icon_help"
                    android:tint="@color/gray_a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_icon_edit"
                        android:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:layout_marginLeft="7dp"
                        android:text="@string/calendar_edit"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_habit_promise_score"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_calendar_main"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_calendar_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/white_f"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_button_calendar_before_month"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_icon_arrow_left" />

                <TextView
                    android:id="@+id/text_calendar_month"
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/image_button_calendar_after_month"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_icon_arrow_right" />

            </LinearLayout>

            <!--요일-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sunday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/monday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tuesday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wednesday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/thursday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/friday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/saturday"
                    android:textColor="@color/black_5"
                    android:textSize="16sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pagerCalendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>