<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#f9fbfd"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_icon_arrow_left"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvNewHabit"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical|center"
            android:text="@string/create_new_habit"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:text="@string/create_new_habit_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="37dp"
        android:gravity="center_vertical"
        android:hint="@string/create_new_habit_name_hint"
        android:maxLength="40"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#cccccc"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etStartDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvMaxLen"
        android:layout_width="45dp"
        android:layout_height="12dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:text="@string/create_new_habit_name_maxLength"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:text="@string/create_new_habit_start_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etStartDate"
        app:layout_constraintEnd_toStartOf="@+id/etStartDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etStartDate" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="31dp"
        android:gravity="center_vertical"
        android:hint="@string/create_new_habit_start_date_hint"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="#cccccc"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sbPeriod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvStartDate" />

    <TextView
        android:id="@+id/tvPeriod"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:text="@string/create_new_habit_period"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sbPeriod"
        app:layout_constraintEnd_toStartOf="@+id/sbPeriod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sbPeriod" />

    <com.example.habitpalette.ui.common.CreateHabitPeriodSeekBar
        android:id="@+id/sbPeriod"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="34dp"
        android:gravity="center_vertical"
        android:max="3"
        android:padding="0dp"
        android:progress="0"
        android:progressDrawable="@android:color/transparent"
        android:thumb="@drawable/seek_bar_thumb"
        app:layout_constraintBottom_toTopOf="@+id/rgColorTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvPeriod" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="30dp"
        android:gravity="center_vertical"
        android:text="@string/create_new_habit_color"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeriod" />

    <RadioGroup
        android:id="@+id/rgColorTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:checkedButton="@id/rbPink"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rgColorBottom"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_pink" />

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_red" />

        <RadioButton
            android:id="@+id/rbOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_orange" />

        <RadioButton
            android:id="@+id/rbYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_yellow" />

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_green" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgColorBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbLightGreenBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_light_green_blue" />

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_blue" />

        <RadioButton
            android:id="@+id/rbLightBluePurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_light_blue_purple" />

        <RadioButton
            android:id="@+id/rbPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_purple" />

        <RadioButton
            android:id="@+id/rbGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:button="@drawable/circle_color_button_gray" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/button_save"
        android:enabled="false"
        android:text="@string/button_save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>